--- a/GraphingTracker/GraphingTracker/Pages/AddGraph.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/AddGraph.xaml
@@ -69,8 +69,10 @@
             HeightRequest="50"/>
 
 
-<Button   Text="Add"
+<Button Text="Add"
         WidthRequest="200"
+        TextColor="white"
+        BackgroundColor="#038aff"
         HeightRequest="50"
         CornerRadius="20"
         HorizontalOptions="CenterAndExpand"
@@ -78,6 +80,10 @@
         />
 
 <Button Text="Cancel"
+        TextColor="red"
+        BackgroundColor="white"
+        BorderColor="red"
+        BorderWidth="1"
         WidthRequest="200"
         HeightRequest="50"
         CornerRadius="20"
