--- a/GraphingTracker/GraphingTracker/Pages/CatInfo.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/CatInfo.xaml
@@ -2,15 +2,21 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="GraphingTracker.CatInfo">
+    x:Class="GraphingTracker.CatInfo"
+    xmlns:local="clr-namespace:GraphingTracker"
+    Title="Category Info">
 
 
-    <NavigationPage.TitleView>
-        <Button Text="Add" HeightRequest="20" WidthRequest="20" HorizontalOptions="End" Clicked="Button_Clicked"/>
-    </NavigationPage.TitleView>
+    <ContentPage.ToolbarItems> 
+    <ToolbarItem Text="Add"  Clicked="Button_Clicked"></ToolbarItem>
+</ContentPage.ToolbarItems>
+
+    <ContentPage.BindingContext>
+        <local:CatInfoViewModel/>
+    </ContentPage.BindingContext>
   <StackLayout>
       <Label x:Name="lblName"></Label>
-      <ListView x:Name="llist"  ItemsSource="{Binding List}" Grid.Row="1" HeightRequest="300" >
+      <ListView x:Name="llist"  ItemsSource="{Binding ItemList}" Grid.Row="1" HeightRequest="300" >
        <ListView.ItemTemplate>
            <DataTemplate>
                <ViewCell>
@@ -20,19 +26,20 @@
                            <ColumnDefinition Width="7*"/>
                        </Grid.ColumnDefinitions>
                        
-                        <Label Text="{Binding Name} " Grid.Column="1"></Label>
+                        <Label Text="{Binding Name} " VerticalOptions="Start" Grid.Column="1"></Label>
+                        <Label Text="{Binding Unit} " VerticalOptions="End" Grid.Column="1"></Label>
                         <Image Source="edit.png" Grid.Column="2">
                             <Image.GestureRecognizers>
-                                <TapGestureRecognizer
-                                    />
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_edit"
+                                  CommandParameter="{Binding Name}"  />
                             </Image.GestureRecognizers>
                         </Image>
                        
                        <Image Source="trash.png" Grid.Column="3">
                             <Image.GestureRecognizers>
                                 <TapGestureRecognizer
-                               
-                                    />
+                               Tapped="TapGestureRecognizer_delete"
+                                   CommandParameter="{Binding Name}" />
                             </Image.GestureRecognizers>
                         </Image>
                    </Grid>
