--- a/GraphingTracker/GraphingTracker/Pages/ManageGraphs.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/ManageGraphs.xaml
@@ -1,14 +1,67 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:oxy="clr-namespace:OxyPlot.Xamarin.Forms;assembly=OxyPlot.Xamarin.Forms"
+    xmlns:local="clr-namespace:GraphingTracker"
+    xmlns:forms="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms"
     x:Class="GraphingTracker.ManageGraphs"
     Title="ManageGraphs">
 
-<ContentPage.ToolbarItems> 
+<ContentPage.ToolbarItems>
     <ToolbarItem Text="Add"  Clicked="Button_Clicked"></ToolbarItem>
 </ContentPage.ToolbarItems>
 
+   <ContentPage.BindingContext>
+        <local:ManageGraphsViewModel/>
+    </ContentPage.BindingContext>
+  <Grid>
 
-   
+  <Grid.RowDefinitions>
+      <RowDefinition Height="*" />
+
+
+
+  </Grid.RowDefinitions>
+
+
+
+   <ListView x:Name="llist"  ItemsSource="{Binding List}" Grid.Row="0" HeightRequest="300" >
+       <ListView.ItemTemplate>
+           <DataTemplate>
+               <ViewCell>
+                   <Grid>
+                       <Grid.ColumnDefinitions>
+                           <ColumnDefinition Width="*"/>
+                           <ColumnDefinition Width="7*"/>
+                       </Grid.ColumnDefinitions>
+                       <Grid.RowDefinitions>
+                           <RowDefinition Height="*"/>
+                       </Grid.RowDefinitions>
+                       <!--<Label TextColor="#038aff" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Center" Text="{Binding Name} " Grid.Column="1"></Label>-->
+                        <forms:ChartView Chart="{Binding Name}" HeightRequest="150" Grid.Column="1"/>
+                       <Image Source="edit.png" Grid.Column="2">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer
+
+                                    CommandParameter="{Binding Name}"/>
+                            </Image.GestureRecognizers>
+                        </Image>
+                       <Image Source="trash.png" Grid.Column="3">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer
+
+                                    CommandParameter="{Binding Name}"/>
+                            </Image.GestureRecognizers>
+                        </Image>
+                   </Grid>
+
+               </ViewCell>
+           </DataTemplate>
+       </ListView.ItemTemplate>
+   </ListView>
+   <!--<forms:ChartView x:Name="Chart1" HeightRequest="150" />-->
+
+</Grid>
+
 </ContentPage>
