--- a/GraphingTracker/GraphingTracker/Pages/ManageCategories.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/ManageCategories.xaml
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
+<!--****************************************************
+ITU project 2021 - Graphing Tracker
+
+@authors - Tadeas Kachyna, xkachy00@fit.vutbr.cz
+@date - 5.12.2021
+****************************************************-->
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -10,12 +16,6 @@
 <ContentPage.ToolbarItems> 
     <ToolbarItem Text="Add"  Clicked="Button_Clicked"></ToolbarItem>
 </ContentPage.ToolbarItems>
-
-
-<ContentPage.BindingContext>
-    <local:ManageCategoriesViewModel/>
-</ContentPage.BindingContext>
-
 <Grid>
     <Grid.Background>
            
