--- a/GraphingTracker/GraphingTracker/Pages/AddCategory.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/AddCategory.xaml
@@ -1,16 +1,20 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
+<!--****************************************************
+ITU project 2021 - Graphing Tracker
+
+@authors - Tadeas Kachyna, xkachy00@fit.vutbr.cz
+@date - 5.12.2021
+****************************************************-->
+
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="GraphingTracker.AddCategory"
-   Title="Add Category"
+    Title="Add Category"
     xmlns:local="clr-namespace:GraphingTracker">
-    <ContentPage.BindingContext>
-        <local:AddCategoryViewModel/>
-    </ContentPage.BindingContext>
+
 <Grid>
-        <Grid.Background>
-           
+        <Grid.Background>      
            <LinearGradientBrush EndPoint="0,1">
                <GradientStop Color="#038aff"
                                Offset="0.3" />
@@ -82,12 +86,8 @@
         VerticalOptions="StartAndExpand"
         Clicked="Button_Clicked"
         />
-   
-     
 
-   
- 
 </StackLayout>
-        </Frame>
-    </Grid>
+</Frame>
+</Grid>
 </ContentPage>
