--- a/GraphingTracker/GraphingTracker/Pages/AddGraph.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/AddGraph.xaml
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
+<!--****************************************************
+ITU project 2021 - Graphing Tracker
+
+@authors - Tadeas Kachyna, xkachy00@fit.vutbr.cz
+@date - 5.12.2021
+****************************************************-->
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -26,8 +32,7 @@
 <Entry  
         Margin="20,0,20,0"
         x:Name="graph_name_entry"
-        HeightRequest="40">
-        
+        HeightRequest="40">        
 </Entry>
 
 <Label  Text="Category"
