--- a/GraphingTracker/GraphingTracker/Pages/CatInfo.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/CatInfo.xaml
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
+<!--****************************************************
+ITU project 2021 - Graphing Tracker
+
+@authors - Tadeas Kachyna, xkachy00@fit.vutbr.cz
+@date - 5.12.2021
+****************************************************-->
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -11,9 +17,6 @@
     <ToolbarItem Text="Add"  Clicked="Button_Clicked"></ToolbarItem>
 </ContentPage.ToolbarItems>
 
-    <ContentPage.BindingContext>
-        <local:CatInfoViewModel/>
-    </ContentPage.BindingContext>
   <StackLayout>
       <Label x:Name="lblName" ></Label>
       <ListView x:Name="llist" Grid.Row="1" HeightRequest="300" >
