--- a/GraphingTracker/GraphingTracker/Pages/AboutAppPage.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/AboutAppPage.xaml
@@ -29,9 +29,10 @@ ITU project 2021 - Graphing Tracker
                  <Label Margin="0,10,0,0"  Text="Developers" HorizontalOptions="Center" FontSize="20" TextColor="Black"/>
                  <Label Text="Tadeáš Kachyňa" HorizontalOptions="Center" FontSize="15" TextColor="Black"/>
                  <Label Text="Lukáš Hais" HorizontalOptions="Center" FontSize="15" TextColor="Black"/>
-                 <Label Text="Lukáš Neupaer" HorizontalOptions="Center" FontSize="15" TextColor="Black" />
-                 <Label Margin="0,20,0,0" Text="This application brings you a new modern interface with options for recording your daily life." HorizontalOptions="Center" FontSize="15" TextColor="Black" />
-                 <Button Text="Go Back"
+                 <Label Text="Lukáš Neupauer" HorizontalOptions="Center" FontSize="15" TextColor="Black" />
+                 <Label Margin="0,20,0,0" Text="This application brings you a new modern" HorizontalOptions="CenterAndExpand" FontSize="15" TextColor="Black" />
+            <Label Margin="0,0,0,0" Text="interface with options for recording your daily life." HorizontalOptions="CenterAndExpand" FontSize="15" TextColor="Black" />
+            <Button Text="Go Back"
                     WidthRequest="200"
                     BorderColor="#038aff"
                     TextColor="#038aff"
