--- a/GraphingTracker/GraphingTracker/Pages/AddItem.xaml
+++ b/GraphingTracker/GraphingTracker/Pages/AddItem.xaml
@@ -11,7 +11,16 @@ ITU project 2021 - Graphing Tracker
     x:Class="GraphingTracker.AddItem"
     xmlns:local="clr-namespace:GraphingTracker"
     Title="Add Item">
-
+ <Grid>
+        <Grid.Background>
+           <LinearGradientBrush EndPoint="0,1">
+               <GradientStop Color="#038aff"
+                               Offset="0.3" />
+               <GradientStop Color="#d896ff"
+                               Offset="1.0" />            
+           </LinearGradientBrush>
+       </Grid.Background>
+    <Frame WidthRequest="150" CornerRadius="50" Margin="20" HeightRequest="300" BackgroundColor="white">
 <StackLayout>
     <Label  Text="Name"
         FontSize="Medium"
@@ -98,4 +107,6 @@ ITU project 2021 - Graphing Tracker
         />
 
 </StackLayout>
+        </Frame>
+        </Grid>
 </ContentPage>
